--- a/config/locales/devise.de.yml
+++ b/config/locales/devise.de.yml
@@ -1,6 +1,6 @@
 # Additional translations at https://github.com/plataformatec/devise/wiki/I18n
 
-en:
+de:
   devise:
     confirmations:
       confirmed: "Your email address has been successfully confirmed."
@@ -40,15 +40,15 @@ en:
       signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
       update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirm link to confirm your new email address."
       updated: "Your account has been updated successfully."
-      sign_up: "Sign up"
+      sign_up: "Registrieren"
     sessions:
       signed_in: "Signed in successfully."
-      signed_in_as: "Signed in as"
+      signed_in_as: "Angemeldet als"
       signed_out: "Signed out successfully."
       already_signed_out: "Signed out successfully."
-      log_in: "Log in"
-      log_out: "Log out"
-      edit_profile: "Edit Profile"
+      log_in: "Anmelden"
+      log_out: "Abmelden"
+      edit_profile: "Profil bearbeiten"
     unlocks:
       send_instructions: "You will receive an email with instructions for how to unlock your account in a few minutes."
       send_paranoid_instructions: "If your account exists, you will receive an email with instructions for how to unlock it in a few minutes."
